@@ -19,8 +19,6 @@ eps eps [0 0 0 0 0 0 0] 0.5;
 rho rho [1 -3 0 0 0 0 0] 1000;
 mu mu [1 -1 -1 0 0 0 0] 1e-03;
 
-forcingPotential fixedValue;
-
 fixedPotentialList
 (
     ( (5 3 0.5) 12)
